--- a/GrinGlobal.Admin/app.config
+++ b/GrinGlobal.Admin/app.config
@@ -61,7 +61,7 @@
   <applicationSettings>
     <GrinGlobal.Admin.Properties.Settings>
       <setting name="GrinGlobal_Admin_GUISvc_GUI" serializeAs="String">
-        <value>http://localhost:2600/gringlobal/gui.asmx</value>
+        <value>http://localhost:2600/GrinGlobal/GUI.asmx</value>
       </setting>
     </GrinGlobal.Admin.Properties.Settings>
   </applicationSettings>
