--- a/GrinGlobal.Search.Engine.Tester/App.config
+++ b/GrinGlobal.Search.Engine.Tester/App.config
@@ -117,10 +117,10 @@
   <applicationSettings>
     <GrinGlobal.Search.Engine.Tester.Properties.Settings>
       <setting name="GrinGlobal_Search_Engine_Tester_guitest_GUI" serializeAs="String">
-        <value>http://localhost:2600/gringlobal/gui.asmx</value>
+        <value>http://localhost:2600/GrinGlobal/GUI.asmx</value>
       </setting>
       <setting name="GrinGlobal_Search_Engine_Tester_ggtest_gg" serializeAs="String">
-        <value>http://localhost:2600/gringlobal/gg.asmx</value>
+        <value>http://localhost:2600/GrinGlobal/gg.asmx</value>
       </setting>
     </GrinGlobal.Search.Engine.Tester.Properties.Settings>
   </applicationSettings>
