--- a/GrinGlobal.UAC/GrinGlobal.UAC.csproj
+++ b/GrinGlobal.UAC/GrinGlobal.UAC.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -14,6 +14,10 @@
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>GrinGlobal.snk</AssemblyOriginatorKeyFile>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <OldToolsVersion>3.5</OldToolsVersion>
+    <UpgradeBackupLocation />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -65,6 +69,20 @@
   -->
   <PropertyGroup>
     <PostBuildEvent>cd "$(TargetDir)"
+"\mt.exe" -manifest ..\..\$(TargetFileName).manifest  -outputresource:$(TargetFileName);#1
+cd "$(TargetDir)..\..\obj\$(ConfigurationName)"
+"\mt.exe" -manifest ..\..\$(TargetFileName).manifest  -outputresource:$(TargetFileName);#1
+
+echo RE-SIGNING ASSEMBLY...
+
+cd "$(TargetDir)"
+"\sn.exe" -q -Ra "$(TargetFileName)" "$(ProjectDir)GrinGlobal.snk"
+cd "$(TargetDir)..\..\obj\$(ConfigurationName)"
+"\sn.exe" -q -Ra "$(TargetFileName)" "$(ProjectDir)GrinGlobal.snk"
+
+echo ASSEMBLY RE-SIGNED
+<!--
+cd "$(TargetDir)"
 "\Program Files\Microsoft SDKs\Windows\v6.0a\bin\mt.exe" -manifest ..\..\$(TargetFileName).manifest  -outputresource:$(TargetFileName);#1
 cd "$(TargetDir)..\..\obj\$(ConfigurationName)"
 "\Program Files\Microsoft SDKs\Windows\v6.0a\bin\mt.exe" -manifest ..\..\$(TargetFileName).manifest  -outputresource:$(TargetFileName);#1
@@ -77,6 +95,7 @@ cd "$(TargetDir)..\..\obj\$(ConfigurationName)"
 "\Program Files\Microsoft SDKs\Windows\v6.0a\bin\sn.exe" -q -Ra "$(TargetFileName)" "$(ProjectDir)GrinGlobal.snk"
 
 echo ASSEMBLY RE-SIGNED
+-->
 </PostBuildEvent>
   </PropertyGroup>
 </Project>
