--- a/GrinGlobal.Utility64/GrinGlobal.Utility64.csproj
+++ b/GrinGlobal.Utility64/GrinGlobal.Utility64.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -12,7 +12,7 @@
     <AssemblyName>ggutil64</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <StartupObject> 
+    <StartupObject>
     </StartupObject>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
@@ -29,6 +29,10 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <OldToolsVersion>3.5</OldToolsVersion>
+    <UpgradeBackupLocation />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -99,6 +103,9 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>\projects\GrinGlobal_non-svn\cabsdk\bin\cabarc.exe n "$(ProjectDir)utility64.cab" "$(ProjectDir)bin\$(Configuration)\ggutil64.exe" "$(ProjectDir)bin\$(Configuration)\ggutil64.pdb"</PostBuildEvent>
+    <PostBuildEvent>
+	<!-- \projects\GrinGlobal_non-svn\cabsdk\bin\cabarc.exe n "$(ProjectDir)utility64.cab" "$(ProjectDir)bin\$(Configuration)\ggutil64.exe" "$(ProjectDir)bin\$(Configuration)\ggutil64.pdb" -->
+	\cabarc.exe n "$(ProjectDir)utility64.cab" "$(ProjectDir)bin\$(Configuration)\ggutil64.exe" "$(ProjectDir)bin\$(Configuration)\ggutil64.pdb"
+	</PostBuildEvent>
   </PropertyGroup>
 </Project>
